# ImageEditor

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Classes/Header/: EditorPluginInterface.h  MainWindow.h
Classes/Source/: MainWindow.cpp
Plugins/AffinePlugin/: AffinePlugin.cpp  AffinePlugin.h  CMakeLists.txt
Plugins/CartoonifyPlugin/: CMakeLists.txt  CartoonifyPlugin.cpp  CartoonifyPlugin.h
Plugins/ErodePlugin/: CMakeLists.txt  ErodePlugin.cpp  ErodePlugin.h
Plugins/RotatePlugin/: CMakeLists.txt  RotatePlugin.cpp  RotatePlugin.h
Plugins/SharpenPlugin/: CMakeLists.txt  SharpenPlugin.cpp  SharpenPlugin.h
